--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^8.0.0",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/passport": "^9.0.3",
+    "@prisma/client": "^4.14.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +14,18 @@
     "@types/node": "^16.18.28",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "argon2": "^0.30.3",
+    "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
